# skin-cancer-backend

./: app.py  login.html  model_skin_cancer.h5  pyproject.toml  render.yaml  requirements.txt  results.html  skin_cancer_detection.py  train_model.py
templates/: index.html  register.html
