[tool.poetry]
name = "skin-cancer-backend"
version = "0.1.0"
description = "Backend for skin cancer detection app"
authors = ["Madhuri <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
gunicorn = "^20.1.0"
tensorflow = "2.13.0"
# Add other dependencies here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
